--- a/.lh/src/hooks/useOAuthConfig.ts.json
+++ b/.lh/src/hooks/useOAuthConfig.ts.json
@@ -3,7 +3,7 @@
     "activeCommit": 0,
     "commits": [
         {
-            "activePatchIndex": 8,
+            "activePatchIndex": 13,
             "patches": [
                 {
                     "date": 1752840324219,
@@ -40,6 +40,26 @@
                 {
                     "date": 1753013719098,
                     "content": "Index: \n===================================================================\n--- \n+++ \n@@ -98,9 +98,9 @@\n         codeVerifier: pkceChallenge.codeVerifier,\n         state,\n       };\n     };\n-  }, [config]);\n+  }, [config, options.additionalParameters]);\n \n   return {\n     config,\n     additionalParameters: options.additionalParameters,\n"
+                },
+                {
+                    "date": 1753027282384,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -42,9 +42,11 @@\n /**\n  * React hook for creating OAuth configuration\n  * Generates Expo-compatible OAuth configuration with proper redirect URIs\n  */\n-export function useOAuthConfig(options: UseOAuthConfigOptions): UseOAuthConfigResult {\n+export function useOAuthConfig(\n+  options: UseOAuthConfigOptions\n+): UseOAuthConfigResult {\n   const config = useMemo((): ExpoOAuthConfig => {\n     return {\n       clientId: options.clientId,\n       endpoints: {\n@@ -53,10 +55,10 @@\n         revocation: options.revocationEndpoint,\n       },\n       redirectUri: options.redirectUri,\n       scopes: options.scopes || ['read', 'write'],\n-      scheme: options.scheme,\n-      path: options.path,\n+      scheme: options.scheme || 'oauth-expo',\n+      path: options.path || 'callback',\n     };\n   }, [\n     options.clientId,\n     options.authorizationEndpoint,\n"
+                },
+                {
+                    "date": 1753027301736,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -146,9 +146,9 @@\n       clientId,\n       endpoints,\n       redirectUri,\n       scopes: options?.scopes || ['read', 'write'],\n-      scheme: options?.scheme,\n+      scheme: options?.scheme || 'oauth-expo',\n       path: options?.path || 'auth/callback',\n     };\n   }, [options?.scheme, options?.path, options?.scopes]);\n \n"
+                },
+                {
+                    "date": 1753027992449,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -81,11 +81,11 @@\n \n       // Build authorization URL\n       const params = new URLSearchParams({\n         response_type: 'code',\n-        client_id: config.clientId,\n-        redirect_uri: config.redirectUri,\n-        scope: config.scopes.join(' '),\n+        client_id: options.clientId,\n+        redirect_uri: options.redirectUri,\n+        scope: (options.scopes || []).join(' '),\n         state,\n         code_challenge: pkceChallenge.codeChallenge,\n         code_challenge_method: pkceChallenge.codeChallengeMethod,\n         ...options.additionalParameters,\n"
+                },
+                {
+                    "date": 1753028160409,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -51,9 +51,9 @@\n       clientId: options.clientId,\n       endpoints: {\n         authorization: options.authorizationEndpoint,\n         token: options.tokenEndpoint,\n-        revocation: options.revocationEndpoint,\n+        revocation: options.revocationEndpoint || '',\n       },\n       redirectUri: options.redirectUri,\n       scopes: options.scopes || ['read', 'write'],\n       scheme: options.scheme || 'oauth-expo',\n"
+                },
+                {
+                    "date": 1753028355025,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -98,9 +98,9 @@\n         codeVerifier: pkceChallenge.codeVerifier,\n         state,\n       };\n     };\n-  }, [config, options.additionalParameters]);\n+  }, [config, options.additionalParameters, options.clientId, options.redirectUri, options.scopes]);\n \n   return {\n     config,\n     additionalParameters: options.additionalParameters,\n"
                 }
             ],
             "date": 1752840324219,
