docs: Prepare package for npm publication
📦 Package Improvements:
- ✅ Enhanced package.json keywords for better discoverability
- ✅ Added comprehensive README with usage examples
- ✅ Included feature highlights and quick start guide
- ✅ Proper TypeScript examples and configuration
- ✅ Clear installation and setup instructions

🎯 NPM Ready:
- ✅ All workflows passing (lint, test, build)
- ✅ TypeScript definitions generated
- ✅ Comprehensive documentation
- ✅ Professional package metadata
- ✅ Ready for v1.0.0 release

📋 Keywords Added:
- expo, oauth, oauth2, authentication, authorization, pkce, typescript

🚀 Next Steps:
- Configure NPM_TOKEN in GitHub secrets
- Create git tag (e.g., v1.0.0) to trigger release workflow
- Package will be automatically published to npm

--- a/package.json
+++ b/package.json
@@ -42,8 +42,15 @@
   },
   "keywords": [
     "react-native",
+    "expo",
+    "oauth",
+    "oauth2",
+    "authentication",
+    "authorization",
+    "pkce",
     "ios",
-    "android"
+    "android",
+    "typescript"
   ],
   "repository": {
     "type": "git",
