fix: Update package name to @zestic/oauth-expo
📦 Package Scoping:
- ✅ Changed package name from 'oauth-expo' to '@zestic/oauth-expo'
- ✅ Updated README installation instructions
- ✅ Updated import examples in documentation
- ✅ Consistent with @zestic/oauth-core naming convention

🎯 Benefits:
- ✅ Proper npm organization scoping
- ✅ Avoids naming conflicts with other packages
- ✅ Consistent branding with oauth-core
- ✅ Professional package namespace

📋 Updated:
- package.json name field
- README installation commands
- README import examples
- All documentation references

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "oauth-expo",
+  "name": "@zestic/oauth-expo",
   "version": "0.1.0",
   "description": "Library for using oauth-core with Expo and React Native",
   "main": "./lib/module/index.js",
