fix: Change license from MIT to Apache-2.0
📄 License Update:
- ✅ Updated package.json license field to 'Apache-2.0'
- ✅ Updated README.md license section
- ✅ Replaced LICENSE file with full Apache 2.0 license text
- ✅ Copyright notice updated to 'Copyright 2025 Zestic'

🎯 Compliance:
- ✅ Consistent licensing across all project files
- ✅ Proper Apache 2.0 license terms and conditions
- ✅ Ready for npm publication with correct license

--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "url": "git+https://github.com/zestic/oauth-expo.git"
   },
   "author": "Zestic <develop@zestic.com> (https://github.com/zestic)",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/zestic/oauth-expo/issues"
   },
