feat: migrate from yarn to npm
- Remove yarn configuration files (.yarnrc.yml, yarn.lock, .yarn/)
- Update package.json to use npm package manager
- Update all scripts to use npm commands instead of yarn
- Update GitHub Actions workflows to use npm
- Update documentation (README, CONTRIBUTING) to reflect npm usage
- Generate package-lock.json with npm install
- Update oauth-core dependency to 0.3.0
- Maintain workspace functionality with npm workspaces

All tests passing and build successful with npm.

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -35,7 +35,7 @@ jobs:
       uses: ./.github/actions/setup
 
     - name: Build
-      run: yarn build
+      run: npm run build
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
