--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,23 +25,19 @@ jobs:
         uses: ./.github/actions/setup
 
       # Manual setup for other Node versions
-      - name: Enable Corepack
-        if: matrix.node-version != 20
-        run: corepack enable
-
       - name: Setup Node.js ${{ matrix.node-version }}
         if: matrix.node-version != 20
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'yarn'
+          cache: 'npm'
 
       - name: Install dependencies
         if: matrix.node-version != 20
-        run: yarn install --frozen-lockfile
-        
+        run: npm ci
+
       - name: Run tests
-        run: yarn test --coverage
+        run: npm test -- --coverage
         
       - name: Upload coverage reports to Codecov
         if: matrix.node-version == 20
