--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -15,35 +15,8 @@ runs:
       with:
         node-version-file: .nvmrc
         registry-url: ${{ inputs.registry-url }}
-
-    - name: Enable Corepack
-      run: corepack enable
-      shell: bash
-
-    - name: Restore dependencies
-      id: yarn-cache
-      uses: actions/cache/restore@v4
-      with:
-        path: |
-          **/node_modules
-          .yarn/install-state.gz
-        key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}-${{ hashFiles('**/package.json', '!node_modules/**') }}
-        restore-keys: |
-          ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
-          ${{ runner.os }}-yarn-
+        cache: 'npm'
 
     - name: Install dependencies
-      if: steps.yarn-cache.outputs.cache-hit != 'true'
-      run: |
-        # Try immutable first, fallback to regular install if needed
-        yarn install --immutable || yarn install
+      run: npm ci
       shell: bash
-
-    - name: Cache dependencies
-      if: steps.yarn-cache.outputs.cache-hit != 'true'
-      uses: actions/cache/save@v4
-      with:
-        path: |
-          **/node_modules
-          .yarn/install-state.gz
-        key: ${{ steps.yarn-cache.outputs.cache-primary-key }}
